# lib_ngstd

./: .gitignore  CMakeLists.txt  README.md  paths.md
cmake/: FindAnyProject.cmake  FindExtProject.cmake  FindExtPyQt5.cmake  FindPyQt5.cmake  FindPyQt5.py  FindSIP.cmake  PackageConfigFull.cmake.in  PackageConfigFullLocal.cmake.in  SIPMacros.cmake  pyproject.toml.in  util.cmake
python/: CMakeLists.txt  __init__.py  project.py
python/core/: __init__.py  core.sip  request.sip
python/framework/: __init__.py  access.sip  framework.sip
python/loader/: ximport.py
python/sip/core/: coremod.sip
python/sip/framework/: frameworkmod.sip
res/: ngstd.rc
src/: CMakeLists.txt
src/core/: CMakeLists.txt  application.cpp  application.h  core.cpp  core.h  cpl_json.cpp  cpl_json.h  request.cpp  request.h  util.cpp  util.h  version.h
src/core/4/: CMakeLists.txt
src/core/5/: CMakeLists.txt
src/framework/: CMakeLists.txt  application.cpp  application.h  framework.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  minisplitter.cpp  minisplitter.h  navigationpane.cpp  navigationpane.h  navigationwidget.cpp  navigationwidget.h  sentryreporter.cpp  sentryreporter.h  style.cpp  style.h  styledbar.cpp  styledbar.h  updater.cpp  updater.h
src/framework/4/: CMakeLists.txt
src/framework/5/: CMakeLists.txt
src/framework/access/: access.cpp  access.h  sign.cpp  sign.h.in  signbutton.cpp  signbutton.h  signdialog.cpp  signdialog.h  signdialog.ui  signserver.cpp  signserver.h
src/framework/res/: attribution.md  framework.qrc  interface.json
src/framework/res/themes/: dark.theme  light.theme
translations/: CMakeLists.txt  ngstd_framework_en.ts  ngstd_framework_ru.ts
